# lv_port_pc_vscode

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  lv_conf.h
main/include/: global_def.h
main/src/: main.c  ui_app.c  ui_app.h
main/src/view/: screen_saver.c
